--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -47,6 +47,6 @@
 {% endblock %}
 
 {% block page-scripts %}
-    <script data-require="angular.js@*" data-semver="1.2.10" src="http://code.angularjs.org/1.2.10/angular.js"></script>
+    <script src="{{servlet-context}}/public/js/angular.min.js"></script>
     <script src="{{servlet-context}}/public/js/script.js"></script>
 {% endblock %}
