Working on websockets

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -49,4 +49,7 @@
 {% block page-scripts %}
     <script src="{{servlet-context}}/public/js/angular.min.js"></script>
     <script src="{{servlet-context}}/public/js/script.js"></script>
+    <script type="text/javascript">
+      var BASEURL = "{{base}}";
+    </script>
 {% endblock %}
